<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="search">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="action_settings">action settings</string>
    <string name="title_activity_search_filter">SearchFilterActivity</string>
	<string name="color_filter">Image Color</string>
	<string name="search_option">~~~~!!Search Options!!~~~~</string>
	<string name="image_size">Image size</string>
	<string name="image_type">Image Type</string>
	<string name="site_filter">From Site</string>
	<string name="go_search">Search Now</string>
</resources>
