<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="${packageName}.${activityClass}" >
    
        <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="38dp"
            android:textColor="@color/white"
            android:text="@string/search_option"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal" 
            >

            <TextView
                android:id="@+id/tvImageSize"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:text="@string/image_size"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spnImageSize"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/btn_default"
                android:gravity="right" />
            
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal" 
            >
            <TextView
                android:id="@+id/tvColorFilter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:text="@string/color_filter"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spnColorFilter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:background="@android:drawable/btn_default"
                android:layout_marginTop="5dp" />            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal" 
            >

            <TextView
                android:id="@+id/tvImageType"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:text="@string/image_type"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spnImageType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:background="@android:drawable/btn_default"
                android:layout_marginTop="5dp" />
            
        </LinearLayout>        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal" 
            >
            <TextView
                android:id="@+id/tvSiteFilter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:text="@string/site_filter"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etSiteFilter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:ems="10"
                android:hint="www.blabla.com" >

            </EditText>
            
        </LinearLayout>      
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="onSaveChange"
            android:background="@android:drawable/btn_default"
            android:text="@string/go_search" />
        
    </LinearLayout>

</RelativeLayout>
